dark mode fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -43,7 +43,7 @@
   --color-intl-status-up-to-date: rgba(16, 195, 109, 0.3);
 }
 
-body.lights-out {
+html.lights-out {
   --color-ui-background: theme('colors.gray.900');
   --color-ui-typo: theme('colors.gray.100');
   --color-ui-sidebar: theme('colors.gray.800');
